--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>React App3</title>
+    <title>Chat App</title>
 
      <!-- Required meta tags -->
     <meta charset="utf-8">
