--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chat App</title>
+    <title>TikTalk</title>
 
      <!-- Required meta tags -->
     <meta charset="utf-8">
