--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="LoginAndRegisterCSS.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+    <script src="https://markjivko.com/dist/recorder.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
